syntax = "proto3";

package gamedef3;

//==========================================================
//Session事件消息
//==========================================================

// 一个连接接入
message SessionAccepted
{

}

// 已连接
message SessionConnected
{

}

// 接受错误
message SessionAcceptFailed
{
	string Reason = 1;
}

// 连接错误
message SessionConnectFailed
{
	string Reason = 1;
}

// 连接断开
message SessionClosed
{
	string Reason = 1;
}